tests/tests/errors/2006-37.vb
'#compiler-options:-d:
'#compiler-message:Command line error BC2006 : option 'd' requires ':<symbol_list>'
'#exit-code:1